[tool.poetry]
name = "ninegag"
version = "0.1.0"
description = ""
authors = ["Danilo Shiga <daniloshiga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "latest"
aiofiles = "^-1.4.0"
belogging = "^0.1.3"
aiogram = "^2.0"
tortoise-orm = "latest"
aiosqlite = "latest"
prettyconf = "^2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
